--- a/test-output/old/Tour/methods.html
+++ b/test-output/old/Tour/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Tour</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bd765">  <td>21/02/26 07:51:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:com.qa.test.loginTest@6156496]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=simple test-1@256796279</td>   <td></td> </tr>
-<tr bgcolor="71a7d0">  <td>21/02/26 07:52:00</td>   <td>12932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="loginTest.LoginPage()[pri:1, instance:com.qa.test.loginTest@6156496]">LoginPage</td> 
-  <td>TestNG-test=simple test-1@256796279</td>   <td></td> </tr>
-<tr bgcolor="71a7d0">  <td>21/02/26 07:52:00</td>   <td>13218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="loginTest.AnnouncementPage()[pri:2, instance:com.qa.test.loginTest@6156496]">AnnouncementPage</td> 
-  <td>TestNG-test=simple test-2@1254912125</td>   <td></td> </tr>
-<tr bgcolor="8bd765">  <td>21/02/26 07:52:03</td>   <td>16174</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitBrowser()[pri:0, instance:com.qa.test.loginTest@6156496]">&lt;&lt;quitBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=simple test-2@1254912125</td>   <td></td> </tr>
+<tr bgcolor="a2da80">  <td>21/03/11 15:29:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:com.qa.test.loginTest@b62fe6d]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=simple test-1@2139330961</td>   <td></td> </tr>
+<tr bgcolor="d7f7e0">  <td>21/03/11 15:29:43</td>   <td>6107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="loginTest.LoginPage()[pri:1, instance:com.qa.test.loginTest@b62fe6d]">LoginPage</td> 
+  <td>TestNG-test=simple test-1@2139330961</td>   <td></td> </tr>
+<tr bgcolor="d7f7e0">  <td>21/03/11 15:29:43</td>   <td>6555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="loginTest.clickProfile()[pri:2, instance:com.qa.test.loginTest@b62fe6d]">clickProfile</td> 
+  <td>TestNG-test=simple test-2@1593714960</td>   <td></td> </tr>
+<tr bgcolor="a2da80">  <td>21/03/11 15:29:57</td>   <td>20154</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitBrowser()[pri:0, instance:com.qa.test.loginTest@b62fe6d]">&lt;&lt;quitBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=simple test-2@1593714960</td>   <td></td> </tr>
 </table>
